--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "url": "https://github.com/turingschool-examples/react-starter-kit.git"
   },
   "jest": {
+    "transform": {
+      ".*": "<rootDir>/node_modules/jest-css-modules",
+      "^.+\\.jsx?$": "babel-jest"
+    },
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
@@ -43,6 +47,7 @@
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "jest": "^20.0.4",
+    "jest-css-modules": "^1.1.0",
     "mocha": "^2.4.5",
     "mocha-loader": "^0.7.1",
     "node-libs-browser": "^1.0.0",
