--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,14 @@
     "quotes": [2, "single"],
     "eol-last": [0],
     "no-mixed-requires": [0],
-    "no-underscore-dangle": [0]
+    "no-underscore-dangle": [0],
+    "no-unused-vars": [0],
+    "max-len": [0],
+    "no-alert": [0],
+    "arrow-body-style": [0],
+    "no-useless-constructor": [0],
+    "array-callback-return": [0],
+    "consistent-return": [0],
+    "no-shadow": [0],
   }
 }
